--- a/static/styles.css
+++ b/static/styles.css
@@ -27,11 +27,60 @@
             a:hover {
                 background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);
                 color: #111; /* Цвет ссылки */
-                font-weight: bold;
+                /*font-weight: bold;*/
               }
             /*div{*/
             /*    display:flex;*/
             /*}*/
+
+            .cart-title{
+                font-size: 24px;
+                margin-bottom: 20px;
+            }
+            .cart-tbl td {
+                border-top: 2px solid #f5f5f5;
+                padding: 10px 10px;
+                text-align: center;
+            }
+            .cart-counter{
+                display: flex;
+                align-items: center;
+            }
+            .cart-title {
+                color: #070011;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 1.2;
+                text-align: left;
+                width: 50%;
+            }
+            .cart-cnt{
+                display: block;
+                width: 40px;
+                height: 40px;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-color: #fff;
+                background-size: 14px;
+                border-radius: 50%;
+                border: 1px solid #6d6e71;
+                cursor: pointer;
+            }
+            .cart-cnt--up{
+                background-image: url(images/plus.svg);
+            }
+            .cart-cnt--down{
+                background-image: url(images/minus.svg);
+            }
+            .cart-cnt-t{
+                width: 50px;
+                display: block;
+                border: none;
+                background: none;
+                text-align: center;
+                font-weight: 600;
+                font-size: 16px;
+            }
             .nav-m{
                 display: flex;
                 flex-wrap: wrap;
