Небольшое исправление /cart/add и первый вариант поиска заведений

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -13,14 +13,13 @@
             <a class="nav-item dish-list" href="/cart" >
                 <div class="nav-item">
                     <img src="{{ url_for('static', filename='images/tray-cart.png') }}" height="100%">
-
-
                 </div>
             </a>
             <div class="count">
                 Блюд:
             </div>
         </div>
+{%if mode is sameas true %}
 {% if ((cart|length) == 0) %}
 <h1 class="cart-title">Поднос пуст</h1>
 {% else %}
@@ -44,5 +43,21 @@
     {% endfor %}
     </tbody>
 </table>
+<div class="cart-search" >
+    <a  class="cart-search-ok" href="/cart/search">Найти заведение</a>
+</div>
 {% endif %}
+{% else %}
+{% if ((r_lst|length) == 0) %}
+    <p> Ну и изврат</p>
+    <img src="{{ url_for('static', filename='images/hh.PNG') }}" >
+{% else %}
+<p> Подходящие заведения: </p>
+{% for item in r_lst %}
+    <p> {{item.name}}</p>
+{% endfor %}
+{% endif %}
+{% endif %}
+
 </html>
+
