--- a/static/map.css
+++ b/static/map.css
@@ -1,10 +1,10 @@
 .open-map{
-        width:300px;
-        height:150px;
+        width:400px;
+        height:250px;
         background:pink;
         position:absolute;
-        left:50%; margin-left:-150px;
-        top:50%; margin-top:-75px;
+        left:45%;
+        margin-top:-75px;
         display:none;
       }
 
