--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,11 @@
+
 <html>
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="{{url_for('static', filename='script.js')}}"></script>
-
+        <!--!!!------------------------JS--------------------------!!!-->
+        <script>    </script>
 
 
     </head>
@@ -26,9 +28,9 @@
               <div class="cont-item">
                 <div class="cont-item-img">
                     {% if (ditem.image != None) %}
-                        <img src="{{ url_for('static', filename='images/')}}{{ditem.image}}" alt="место для рекламы"  height="100%">
+                    <img src="{{ url_for('static', filename='images/')}}{{ditem.image}}" alt="место для рекламы"  height="100%">
                     {% else %}
-                        <img src="{{ url_for('static', filename='images/dish.jpg') }}" alt="место для рекламы"  height="100%">
+                    <img src="{{ url_for('static', filename='images/dish.jpg') }}" alt="место для рекламы"  height="100%">
                     {% endif %}
                 </div>
                 <div class="cont-item-title">
