--- a/static/styles.css
+++ b/static/styles.css
@@ -33,18 +33,73 @@
             /*    display:flex;*/
             /*}*/
 
+            .cart :hover{
+                background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);
+                opacity:0.5;
+            }
             .cart-title{
                 font-size: 24px;
                 margin-bottom: 20px;
             }
+
+            .cart-tbl-fkrow{
+                border-radius: 50%;
+                border: 1px solid #6d6e71;
+            }
             .cart-tbl td {
-                border-top: 2px solid #f5f5f5;
+                /*border-top: 2px solid #f5f5f5;*/
                 padding: 10px 10px;
                 text-align: center;
             }
             .cart-counter{
                 display: flex;
                 align-items: center;
+            }
+            .cart-search{
+                width:438px; /*временно*/
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+
+            /*img:hover {*/
+            /*    background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);*/
+            /*    background-image: url(images/tray.png);*/
+             /*   color: #111;  Цвет ссылки */
+            /*    font-weight: bold;*/
+            /*  }*/
+            .count{
+                width: 25px;
+                height: 25px;
+                line-height: 25px;
+                background: red;
+                color:white;
+                margin: 0px -25px;
+                border-radius: 50%;
+                text-align: center;
+            }
+            .cont-search{
+                width:max-content; /*временно*/
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                /*position: relative;*/
+                position: absolute;
+                top: 5%;
+                left: 50%;
+            }
+            .cart-search a{
+                margin:10px;
+                border-radius: 2px;
+                border: 2px solid #52545a;
+                padding: 10px;
+            }
+            .cont-search a{
+                margin:10px;
+                border-radius: 2px;
+                border: 2px solid #52545a;
+                padding: 10px;
             }
             .cart-title {
                 color: #070011;
@@ -111,7 +166,7 @@
             }
             .cont-item-img{
                 height:100px;
-                width:200px;
+                width:100%;
                 text-align: center;
                 vertical-align:middle;
             }
@@ -134,6 +189,39 @@
                 color: #111;
                 font-weight: bold;
             }
-            a.nav-item:hover{
-                background:none;
+            /*a.nav-item:hover{*/
+            /*    background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);*/
+            /*    color: #111;*/
+            /*}*/
+
+            .b-container{
+                width:200px;
+                height:150px;
+                background-color: #ccc;
+                margin:0px auto;
+                padding:10px;
+                font-size:30px;
+                color: #fff;
             }
+            .b-popup{
+                width:100%;
+                min-height:100%;
+                background-color: rgba(0,0,0,0.5);
+                overflow:hidden;
+                position:fixed;
+                top:0px;
+            }
+            .b-popup .b-popup-content{
+                margin:40px auto 0px auto;
+                width:100px;
+                height: 40px;
+                padding:10px;
+                background-color: #c5c5c5;
+                border-radius:5px;
+                box-shadow: 0px 0px 10px #000;
+            }
+
+
+
+
+
