--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="{{url_for('static', filename='script.js')}}"></script>
-
+        <!--!!!------------------------JS--------------------------!!!-->
+        <script>    </script>
 
 
     </head>
@@ -16,10 +17,9 @@
                 {% endfor %}
             </ul>
             <a class="nav-item dish-list" href="/cart" >
-                    <img class="cart" src="{{ url_for('static', filename='images/tray-cart.png') }}" height="100%">
+                    <img class="cart" src="{{ url_for('static', filename='images/tray.png') }}" height="100%">
             </a>
             <div class="count">
-                Блюд:
             </div>
         </div>
          <div class="container">
@@ -27,9 +27,9 @@
               <div class="cont-item">
                 <div class="cont-item-img">
                     {% if (ditem.image != None) %}
-                        <img src="{{ url_for('static', filename='images/')}}{{ditem.image}}" alt="место для рекламы"  height="100%">
+                    <img src="{{ url_for('static', filename='images/')}}{{ditem.image}}" alt="место для рекламы"  height="100%">
                     {% else %}
-                        <img src="{{ url_for('static', filename='images/dish.jpg') }}" alt="место для рекламы"  height="100%">
+                    <img src="{{ url_for('static', filename='images/dish.jpg') }}" alt="место для рекламы"  height="100%">
                     {% endif %}
                 </div>
                 <div class="cont-item-title">
