Что то изменилось

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -26,53 +26,52 @@
             </ul>
             <a class="nav-item dish-list" href="/cart" >
                 <div class="nav-item">
-                    <img src="{{ url_for('static', filename='images/tray-cart.png') }}" height="100%">
+                    <img src="{{ url_for('static', filename='images/tray.png') }}" height="100%">
                 </div>
             </a>
             <div class="count">
-                Блюд:
             </div>
         </div>
-{%if mode is sameas true %}
-{% if ((cart|length) == 0) %}
-<h1 class="cart-title">Поднос пуст</h1>
-{% else %}
-<h1 class="cart-title">Подноc</h1>
-<table class="cart-tbl">
-    <tbody>
-    {% for item in cart %}
-        <tr data-id="{{item.dish.id}}">
-            <td class="cart-title"> {{item.dish.name}}</td>
-            <td>
-            <div class="cart-counter">
-                <button class="cart-cnt cart-cnt--down" ></button>
-                <span class="cart-cnt-t"> {{item.quantity}} </span>
-                <button class="cart-cnt cart-cnt--up" >  </button>
-            </div>
-            </td>
-            <td>
-                <button class="cart-cnt cart-cnt--del" >  </button>
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-<div class="cart-search" >
-    <a  class="cart-search-ok" href="/cart/search">Найти заведение</a>
-</div>
-{% endif %}
-{% else %}
-{% if ((r_lst|length) == 0) %}
-    <p>Нет подходящего заведения</p>
-    <!--<p> Ну и изврат</p>-->
-    <!--<img src="{{ url_for('static', filename='images/hh.PNG') }}" >-->
-{% else %}
-<p> Подходящие заведения: </p>
-{% for item in r_lst %}
-    <p> {{item.name}}</p>
-{% endfor %}
-{% endif %}
-{% endif %}
+<!--{%if mode is sameas true %}-->
+    {% if ((cart|length) == 0) %}
+    <h1 class="cart-title">Поднос пуст</h1>
+    {% else %}
+    <h1 class="cart-title">Подноc</h1>
+    <table class="cart-tbl">
+        <tbody>
+        {% for item in cart %}
+            <tr data-id="{{item.dish.id}}">
+                    <td class="cart-title"> {{item.dish.name}}</td>
+                    <td>
+                    <div class="cart-counter">
+                        <button class="cart-cnt cart-cnt--down" ></button>
+                        <span class="cart-cnt-t"> {{item.quantity}} </span>
+                        <button class="cart-cnt cart-cnt--up" >  </button>
+                    </div>
+                    </td>
+                    <td>
+                        <button class="cart-cnt cart-cnt--del" >  </button>
+                    </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <div class="cart-search" >
+        <a  class="cart-search-ok" href="/cart/search">Найти заведение</a>
+    </div>
+    {% endif %}
+<!--{% else %}-->
+<!--    {% if ((r_lst|length) == 0) %}-->
+<!--        <p>Нет подходящего заведения</p>-->
+        <!--<p> Ну и изврат</p>-->
+        <!--<img src="{{ url_for('static', filename='images/hh.PNG') }}" >-->
+<!--    {% else %}-->
+<!--    <p> Подходящие заведения: </p>-->
+<!--        {% for item in r_lst %}-->
+<!--            <p> {{item.name}}</p>-->
+<!--        {% endfor %}-->
+<!--    {% endif %}-->
+<!--{% endif %}-->
 
 </html>
 
