--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,10 +17,9 @@
                 {% endfor %}
             </ul>
             <a class="nav-item dish-list" href="/cart" >
-                    <img class="cart" src="{{ url_for('static', filename='images/tray-cart.png') }}" height="100%">
+                    <img class="cart" src="{{ url_for('static', filename='images/tray.png') }}" height="100%">
             </a>
             <div class="count">
-                Блюд:
             </div>
         </div>
          <div class="container">
