--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -33,12 +33,21 @@
             /*    display:flex;*/
             /*}*/
 
+            .cart :hover{
+                background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);
+                opacity:0.5;
+            }
             .cart-title{
                 font-size: 24px;
                 margin-bottom: 20px;
             }
+
+            .cart-tbl-fkrow{
+                border-radius: 50%;
+                border: 1px solid #6d6e71;
+            }
             .cart-tbl td {
-                border-top: 2px solid #f5f5f5;
+                /*border-top: 2px solid #f5f5f5;*/
                 padding: 10px 10px;
                 text-align: center;
             }
@@ -52,11 +61,45 @@
                 align-items: center;
                 justify-content: center;
             }
+
+
+            /*img:hover {*/
+            /*    background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);*/
+            /*    background-image: url(images/tray.png);*/
+             /*   color: #111;  Цвет ссылки */
+            /*    font-weight: bold;*/
+            /*  }*/
+            .count{
+                width: 25px;
+                height: 25px;
+                line-height: 25px;
+                background: red;
+                color:white;
+                margin: 0px -25px;
+                border-radius: 50%;
+                text-align: center;
+            }
+            .cont-search{
+                width:max-content; /*временно*/
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                /*position: relative;*/
+                position: absolute;
+                top: 5%;
+                left: 50%;
+            }
             .cart-search a{
                 margin:10px;
                 border-radius: 2px;
                 border: 2px solid #52545a;
-                padding: 5px;
+                padding: 10px;
+            }
+            .cont-search a{
+                margin:10px;
+                border-radius: 2px;
+                border: 2px solid #52545a;
+                padding: 10px;
             }
             .cart-title {
                 color: #070011;
@@ -146,9 +189,10 @@
                 color: #111;
                 font-weight: bold;
             }
-            a.nav-item:hover{
-                background:none;
-            }
+            /*a.nav-item:hover{*/
+            /*    background:linear-gradient(to right, #f37121 0%, #f89a1c 100%);*/
+            /*    color: #111;*/
+            /*}*/
 
             .b-container{
                 width:200px;
